<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:src="@drawable/movieicon"
            android:padding="10dp"/>

    <!--Title-->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"/>
    <TextView
            android:id="@+id/movietitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>


    <!--Overview-->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_overview"/>
    <TextView
            android:id="@+id/overview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    <!--Reviews-->
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reviews:"/>
    <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="5"
            android:stepSize="0.5"
            android:visibility="gone"
            android:isIndicator="true"/>
    <TextView
        android:id="@+id/review"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_review"
        android:padding="8dp"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Language:"/>
    <TextView
            android:id="@+id/language"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    <!--Release Date-->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Release date:"/>
    <TextView
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

    <!--Suitability-->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Suitable for children below 13:"/>
    <TextView
            android:id="@+id/suitable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"/>

</LinearLayout>
